--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": "^19.6.0",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
+    "react-animated": "^0.1.0",
     "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
