--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "mariaeduardapedroso.github.io/front-paginaMadu",
+  "homepage": "mariaeduardapedroso.github.io/front-paginaTutu",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
